overflow issues not solved

--- a/responsive.css
+++ b/responsive.css
@@ -5,12 +5,15 @@
     }
   }*/
 
-  @media screen and (max-width: 767px) {
+  @media only screen and (max-width: 767px) {
     
     main{
       width: 90%;
       margin: 0 auto;
       font-size: .8em;
+    }
+    header nav{
+      overflow: hidden;
     }
    header nav ul {
       position: absolute;
@@ -21,12 +24,11 @@
       display: flex;
       flex-direction: column;
       transition: all 0.3s;
-      overflow: hidden;
     }
-    ul li {
+    header nav ul li {
       margin: 4em 0; 
     }
-    ul li a {
+    header nav ul li a {
       font-size: 20px;
     }
     #check:checked ~ ul {
